--- a/analiza_1.tex
+++ b/analiza_1.tex
@@ -850,7 +850,7 @@ zbieżności w przypadku (i) można odszukać w
 
 W sekcji tej $X$ będzie oznaczać dowolny niepusty zbiór, który wraz z wyróżnioną metryką $d$, tworzy przestrzeń metryczną,
 chyba że w danym ustępie zaznaczę, że jest inaczej. Również pisząc o kuli, będę miał na myśli kulę otwartą.
-Wszelkie niezdefiniowane $n$ będzie z domysłu liczbą naturalną.
+Wszelkie niezdefiniowane $n$ będzie w domyśle liczbą naturalną.
 
 \begin{defr}{Definicja 6.1: Metryka i przestrzeń metryczna}
     \textbf{Metryką} na zbiorze $X$ nazywa się funkcję $d:X\times X\ar\R$, spełniającą następujące warunki:
