--- a/analiza_1.tex
+++ b/analiza_1.tex
@@ -890,7 +890,7 @@ $$0\stackrel{(3)}{=}d(x,x)\stackrel{(4)}{\le} d(x,y)+d(y,x)\stackrel{(2)}{=}2d(x
         \forall_{x,y\in\R^n}\hquad d_E(x,y)=\sqrt{\sum_{k=1}^{n}{(x_k-y_k)^2}}
     \end{equation*}
     \item \textit{uogólniona metryka euklidesowa}\footnote{Nie mogłem odnaleźć nazwy tej metryki, więc koniec końców
-    tak ją nazwałem. Warto zatem nie przywiązywać do niej większej wagi.}, $\quad d_p:\R^n\times\R^n\ar\R$
+    tak ją nazwałem. Nie warto zatem przywiązywać do niej większej wagi.}, $\quad d_p:\R^n\times\R^n\ar\R$
     \begin{equation*}
         \forall_{x,y\in\R^n}\ \forall_{p\ge1}\hquad d_p(x,y)=\left(\sum_{k=1}^{n}{|x_k-y_k|^{p}}\right)^{\frac{1}{p}}
     \end{equation*}
